samples/_failures_safe/1761361403_57a172_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3e58393.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d3e58393.c:164:9: error: expected expression at end of input
  164 |         for (
      |         ^~~
./samples/SAFE/__tmp_d3e58393.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3e58393.c:164:9: error: expected declaration or statement at end of input
